# serializer version: 1
# name: TestStandaloneCreateAsPrescriber.test_standalone_creation_as_prescriber_existing_email[in_list_application]
  '''
  <div aria-labelledby="email-confirmation-label" aria-modal="true" class="modal" id="email-confirmation-modal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="email-confirmation-label">
                      Email existant
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <p>
                      <b>
                          L'adresse jane.doe@test.local est associée au compte de DOE Jane.
                      </b>
                  </p>
                  <p>
                      Cet usager figure déjà dans votre liste d'accompagnements. Vous pouvez vous désigner comme son dernier accompagnateur connu.
                  </p>
              </div>
              <div class="modal-footer">
                  <button class="btn btn-sm btn-outline-primary" name="cancel" type="submit" value="1">
                      Retour
                  </button>
                  <button class="btn btn-sm btn-primary" name="confirm" type="submit" value="1">
                      M'ajouter en tant qu'accompagnateur
                  </button>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestStandaloneCreateAsPrescriber.test_standalone_creation_as_prescriber_existing_email[in_list_organization]
  '''
  <div aria-labelledby="email-confirmation-label" aria-modal="true" class="modal" id="email-confirmation-modal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="email-confirmation-label">
                      Email existant
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <p>
                      <b>
                          L'adresse jane.doe@test.local est associée au compte de DOE Jane.
                      </b>
                  </p>
                  <p>
                      Cet usager figure déjà dans votre liste d'accompagnements. Vous pouvez vous désigner comme son dernier accompagnateur connu.
                  </p>
              </div>
              <div class="modal-footer">
                  <button class="btn btn-sm btn-outline-primary" name="cancel" type="submit" value="1">
                      Retour
                  </button>
                  <button class="btn btn-sm btn-primary" name="confirm" type="submit" value="1">
                      M'ajouter en tant qu'accompagnateur
                  </button>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestStandaloneCreateAsPrescriber.test_standalone_creation_as_prescriber_existing_email[in_list_user]
  '''
  <div aria-labelledby="email-confirmation-label" aria-modal="true" class="modal" id="email-confirmation-modal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="email-confirmation-label">
                      Email existant
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <p>
                      <b>
                          L'adresse jane.doe@test.local est associée au compte de DOE Jane.
                      </b>
                  </p>
                  <p>
                      Cet usager figure déjà dans votre liste d'accompagnements. Vous pouvez vous désigner comme son dernier accompagnateur connu.
                  </p>
              </div>
              <div class="modal-footer">
                  <button class="btn btn-sm btn-outline-primary" name="cancel" type="submit" value="1">
                      Retour
                  </button>
                  <button class="btn btn-sm btn-primary" name="confirm" type="submit" value="1">
                      M'ajouter en tant qu'accompagnateur
                  </button>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestStandaloneCreateAsPrescriber.test_standalone_creation_as_prescriber_existing_email[not_in_list]
  '''
  <div aria-labelledby="email-confirmation-label" aria-modal="true" class="modal" id="email-confirmation-modal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="email-confirmation-label">
                      Email existant
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <p>
                      <b>
                          L'adresse jane.doe@test.local est associée au compte de DOE Jane.
                      </b>
                  </p>
                  <p>
                      Cet usager sera ajouté à votre liste d'accompagnements et vous serez automatiquement désigné comme dernier accompagnateur connu.
                  </p>
              </div>
              <div class="modal-footer">
                  <button class="btn btn-sm btn-outline-primary" name="cancel" type="submit" value="1">
                      Ce n'est pas mon candidat
                  </button>
                  <button class="btn btn-sm btn-primary" name="confirm" type="submit" value="1">
                      Continuer
                  </button>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestStandaloneCreateAsPrescriber.test_standalone_creation_as_prescriber_existing_nir[in_list_application]
  '''
  <div aria-labelledby="nir-confirmation-label" aria-modal="true" class="modal" id="nir-confirmation-modal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="nir-confirmation-label">
                      Utilisateur trouvé
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <p>
                      <b>
                          Le numéro
                          <span>
                              2
                          </span>
                          <span class="ms-1">
                              90
                          </span>
                          <span class="ms-1">
                              01
                          </span>
                          <span class="ms-1">
                              01
                          </span>
                          <span class="ms-1">
                              010
                          </span>
                          <span class="ms-1">
                              101
                          </span>
                          <span class="ms-1">
                              25
                          </span>
                          est associé au compte de DOE Jane.
                      </b>
                  </p>
                  <p>
                      Cet usager figure déjà dans votre liste d'accompagnements. Vous pouvez vous désigner comme son dernier accompagnateur connu.
                  </p>
              </div>
              <div class="modal-footer">
                  <button class="btn btn-sm btn-outline-primary" name="cancel" type="submit" value="1">
                      Retour
                  </button>
                  <button class="btn btn-sm btn-primary" name="confirm" type="submit" value="1">
                      M'ajouter en tant qu'accompagnateur
                  </button>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestStandaloneCreateAsPrescriber.test_standalone_creation_as_prescriber_existing_nir[in_list_organization]
  '''
  <div aria-labelledby="nir-confirmation-label" aria-modal="true" class="modal" id="nir-confirmation-modal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="nir-confirmation-label">
                      Utilisateur trouvé
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <p>
                      <b>
                          Le numéro
                          <span>
                              2
                          </span>
                          <span class="ms-1">
                              90
                          </span>
                          <span class="ms-1">
                              01
                          </span>
                          <span class="ms-1">
                              01
                          </span>
                          <span class="ms-1">
                              010
                          </span>
                          <span class="ms-1">
                              101
                          </span>
                          <span class="ms-1">
                              25
                          </span>
                          est associé au compte de DOE Jane.
                      </b>
                  </p>
                  <p>
                      Cet usager figure déjà dans votre liste d'accompagnements. Vous pouvez vous désigner comme son dernier accompagnateur connu.
                  </p>
              </div>
              <div class="modal-footer">
                  <button class="btn btn-sm btn-outline-primary" name="cancel" type="submit" value="1">
                      Retour
                  </button>
                  <button class="btn btn-sm btn-primary" name="confirm" type="submit" value="1">
                      M'ajouter en tant qu'accompagnateur
                  </button>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestStandaloneCreateAsPrescriber.test_standalone_creation_as_prescriber_existing_nir[in_list_user]
  '''
  <div aria-labelledby="nir-confirmation-label" aria-modal="true" class="modal" id="nir-confirmation-modal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="nir-confirmation-label">
                      Utilisateur trouvé
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <p>
                      <b>
                          Le numéro
                          <span>
                              2
                          </span>
                          <span class="ms-1">
                              90
                          </span>
                          <span class="ms-1">
                              01
                          </span>
                          <span class="ms-1">
                              01
                          </span>
                          <span class="ms-1">
                              010
                          </span>
                          <span class="ms-1">
                              101
                          </span>
                          <span class="ms-1">
                              25
                          </span>
                          est associé au compte de DOE Jane.
                      </b>
                  </p>
                  <p>
                      Cet usager figure déjà dans votre liste d'accompagnements. Vous pouvez vous désigner comme son dernier accompagnateur connu.
                  </p>
              </div>
              <div class="modal-footer">
                  <button class="btn btn-sm btn-outline-primary" name="cancel" type="submit" value="1">
                      Retour
                  </button>
                  <button class="btn btn-sm btn-primary" name="confirm" type="submit" value="1">
                      M'ajouter en tant qu'accompagnateur
                  </button>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: TestStandaloneCreateAsPrescriber.test_standalone_creation_as_prescriber_existing_nir[not_in_list]
  '''
  <div aria-labelledby="nir-confirmation-label" aria-modal="true" class="modal" id="nir-confirmation-modal" role="dialog" tabindex="-1">
      <div class="modal-dialog modal-dialog-centered">
          <div class="modal-content">
              <div class="modal-header">
                  <h3 class="modal-title" id="nir-confirmation-label">
                      Utilisateur trouvé
                  </h3>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                  </button>
              </div>
              <div class="modal-body">
                  <p>
                      <b>
                          Le numéro
                          <span>
                              2
                          </span>
                          <span class="ms-1">
                              90
                          </span>
                          <span class="ms-1">
                              01
                          </span>
                          <span class="ms-1">
                              01
                          </span>
                          <span class="ms-1">
                              010
                          </span>
                          <span class="ms-1">
                              101
                          </span>
                          <span class="ms-1">
                              25
                          </span>
                          est associé au compte de DOE Jane.
                      </b>
                  </p>
                  <p>
                      Cet usager sera ajouté à votre liste d'accompagnements et vous serez automatiquement désigné comme dernier accompagnateur connu.
                  </p>
              </div>
              <div class="modal-footer">
                  <button class="btn btn-sm btn-outline-primary" name="cancel" type="submit" value="1">
                      Ce n'est pas mon candidat
                  </button>
                  <button class="btn btn-sm btn-primary" name="confirm" type="submit" value="1">
                      Continuer
                  </button>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
